[gd_scene load_steps=14 format=2]

[ext_resource path="res://mdl/Demo_rig.tres" type="ArrayMesh" id=1]
[ext_resource path="res://Rig/Rig_V1.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 1.46829

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.478431, 0.478431, 0.478431, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )
roughness = 0.0

[sub_resource type="Shader" id=10]
code = "/*
	蜃気楼シェーダー by あるる（きのもと 結衣）
	Heat haze shader by Yui Kinomoto @arlez80

	MIT License
*/
shader_type spatial;
render_mode unshaded;

uniform float max_shift = 2.5;
uniform float speed = 0.03;
uniform float min_heathaze_dist = 0.99;

float random( vec2 pos )
{ 
	return fract(sin(dot(pos, vec2(12.9898,78.233))) * 43758.5453);
}

float noise( vec2 pos )
{
	return random( floor( pos ) );
}

float value_noise( vec2 pos )
{
	vec2 p = floor( pos );
	vec2 f = fract( pos );

	float v00 = noise( p + vec2( 0.0, 0.0 ) );
	float v10 = noise( p + vec2( 1.0, 0.0 ) );
	float v01 = noise( p + vec2( 0.0, 1.0 ) );
	float v11 = noise( p + vec2( 1.0, 1.0 ) );

	vec2 u = f * f * ( 3.0 - 2.0 * f );

	return mix( mix( v00, v10, u.x ), mix( v01, v11, u.x ), u.y );
}

void fragment( )
{
	float depth = max( texture( DEPTH_TEXTURE, SCREEN_UV ).r - min_heathaze_dist, 0.0 );
	vec2 uv_r = SCREEN_UV + vec2( TIME * speed, 0.0 );
	vec2 uv_g = SCREEN_UV + vec2( -10.0, -TIME * speed );
	vec2 shift = vec2(
		sin(
				value_noise( uv_r * 8.0 ) * 0.2
			+	value_noise( uv_r * 16.0 ) * 0.2
			+	value_noise( uv_r * 32.0 ) * 0.2
			+	value_noise( uv_r * 64.0 ) * 0.2
			+	value_noise( uv_r * 128.0 ) * 0.2
		) - 0.5
	,	sin(
			value_noise( uv_g * 8.0 ) * 0.2
		+	value_noise( uv_g * 16.0 ) * 0.2
		+	value_noise( uv_g * 32.0 ) * 0.2
		+	value_noise( uv_g * 64.0 ) * 0.2
		+	value_noise( uv_g * 128.0 ) * 0.2
		) - 0.5
	) * ( depth * max_shift );
	ALBEDO = texture( SCREEN_TEXTURE, SCREEN_UV + shift ).rgb;
	float depth_shifted = texture( DEPTH_TEXTURE, SCREEN_UV + shift ).r - min_heathaze_dist;

	ALPHA = float( 0.0 < depth_shifted );
	DEPTH = 0.0;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 10 )
shader_param/max_shift = 2.5
shader_param/speed = 0.03
shader_param/min_heathaze_dist = 0.99

[sub_resource type="SphereMesh" id=9]
material = SubResource( 8 )
flip_faces = true
radius = 3.0
height = 6.0

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.3, 0.3, 2 )

[sub_resource type="Animation" id=12]
resource_name = "NO POWER"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("no power/OmniLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("no power/no power2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("no power:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "PowerOn"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:CurrentState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("speed:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 2, 2.7, 3, 3.3, 3.6, 3.9, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "initializing.", "initializing..", "initializing...", "initializing...
gravity stabilizers 
engaging...", "initializing...
gravity stabilizers 
engaging...
system check", "initializing...
gravity stabilizers 
engaging...
system check.", "initializing...
gravity stabilizers 
engaging...
system check..", "initializing...
gravity stabilizers 
engaging...
system check...", "initializing...
gravity stabilizers 
engaging...
system check...OK", "" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance/X_display:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 3.2, 4.4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance/Y_display:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.2, 3.4, 4.4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MeshInstance/Z_display:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.4, 3.6, 4.4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MeshInstance/Crosshair:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "Welcome aboard,
prisoner #8934", "", "+", "+" ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("MeshInstance/Crosshair:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 3, 4, 5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("MeshInstance/Crosshair:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 3, 4, 5 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("MeshInstance/Crosshair:scale:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 3, 4, 5 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("no power:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("OmniLight:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("OmniLight:light_energy")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5 )
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("no power/OmniLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("no power:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("no power/no power2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance/X_display:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MeshInstance/Y_display:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MeshInstance/Z_display:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MeshInstance/Crosshair:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "+" ]
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("MeshInstance/Crosshair:scale:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("MeshInstance/Crosshair:scale:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("MeshInstance/Crosshair:scale:z")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "value"
tracks/10/path = NodePath("no power/OmniLight:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("OmniLight:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("OmniLight:light_energy")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Rig_V1" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.91069e-15, -1, 1.1921e-07, 1, 7.1215e-15, 4.37114e-08, -4.37114e-08, 1.1921e-07, 1, 0.00172627, -0.204294, -0.265846 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, -3.90799e-14, 0, 0.837, -1.0717e-07, -1.06581e-14, 9.97788e-08, 0.899, -0.00278574, 0, -0.508844 )
mesh = ExtResource( 1 )
material/0 = SubResource( 2 )

[node name="Crosshair" type="Label3D" parent="MeshInstance" groups=["ShipInterface"]]
transform = Transform( 1, 0, 0, 0, 1, -2.27773e-22, 0, 2.27773e-22, 1, 1.19209e-07, -1.44166e-07, -1.20934 )
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "+"

[node name="X_display" type="Label3D" parent="MeshInstance" groups=["ShipInterface"]]
transform = Transform( 0.5, -8.47032e-22, 1.77636e-14, 8.47033e-22, 0.5, -3.90799e-14, -1.77636e-14, 3.90799e-14, 0.5, -0.0443239, -1.44166e-07, -1.20934 )
visible = false
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "10"
horizontal_alignment = 2

[node name="Y_display" type="Label3D" parent="MeshInstance" groups=["ShipInterface"]]
transform = Transform( 0.5, 6.35275e-22, 1.06581e-14, 2.11758e-22, 0.5, -3.55271e-14, -1.24345e-14, 2.84217e-14, 0.5, 0.0306376, -1.44166e-07, -1.20934 )
visible = false
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "10"
horizontal_alignment = 0

[node name="Z_display" type="Label3D" parent="MeshInstance" groups=["ShipInterface"]]
transform = Transform( 0.5, 6.35275e-22, 1.42109e-14, 4.23516e-22, 0.5, -4.26326e-14, -1.42109e-14, 3.19744e-14, 0.5, -0.0050292, -0.0718217, -1.20934 )
visible = false
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
text = "10"

[node name="OmniLight" type="OmniLight" parent="." groups=["ShipInterface"]]
transform = Transform( 1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, -0.00278574, 0.805479, 0.386595 )
light_energy = 0.0
shadow_enabled = true
omni_range = 3.64694

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.4, 5.97391e-09, 1.9473e-09, -9.01724e-09, 0.22704, 0.160391, 2.50466e-09, -0.136667, 0.26645, -0.0106937, -0.728842, -1.27178 )
mesh = SubResource( 3 )
skeleton = NodePath("../speed")
material/0 = SubResource( 4 )

[node name="speed" type="Label3D" parent="." groups=["ShipInterface"]]
transform = Transform( 0.5, 1.31561e-08, -5.32907e-14, -1.12716e-08, 0.428377, 0.257863, 6.78499e-09, -0.257863, 0.428377, -0.395213, -0.353313, -1.1263 )
cast_shadow = 0
no_depth_test = true
modulate = Color( 0, 1, 0.647059, 1 )
horizontal_alignment = 0
vertical_alignment = 0

[node name="no power" type="Label3D" parent="." groups=["ShipInterface"]]
transform = Transform( 0.5, 1.31562e-08, -2.22044e-14, -1.12716e-08, 0.428377, 0.515726, 6.78499e-09, -0.257863, 0.856754, -0.200037, -0.561262, -1.00651 )
cast_shadow = 0
no_depth_test = true
modulate = Color( 1, 0, 0, 1 )
text = "NO POWER"
horizontal_alignment = 0

[node name="OmniLight" type="OmniLight" parent="no power"]
transform = Transform( 2, -3.55271e-15, -1.77636e-15, 0, 2, 0, 0, 0, 1, 0.488931, -0.38773, 2.6132 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.0

[node name="no power2" type="Label3D" parent="no power" groups=["ShipInterface"]]
transform = Transform( 1, -2.25432e-08, 2.714e-08, 2.63124e-08, 0.856754, -1.03145, -1.20209e-14, 0.257863, 0.856754, 0.0569527, 1.49007, -0.150136 )
cast_shadow = 0
no_depth_test = true
modulate = Color( 1, 0, 0, 1 )
text = "NO POWER"
horizontal_alignment = 0

[node name="Camera" type="Spatial" parent="."]

[node name="head" type="Camera" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.228, 0, 0 )
current = true
fov = 90.0
far = 1e+06

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Blur" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.458496, 0, -0.318438 )
visible = false
mesh = SubResource( 9 )

[node name="PointerL" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.341, -0.343, 0.466 )
visible = false

[node name="Lasergun" type="MeshInstance" parent="PointerL"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 11 )
skeleton = NodePath("../..")

[node name="SpotLight" type="SpotLight" parent="PointerL"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.03103 )
shadow_enabled = true
spot_range = 50.0
spot_attenuation = 2.14355
spot_angle = 7.0
spot_angle_attenuation = 0.392292

[node name="PointerR" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.341, -0.343, 0.466 )
visible = false

[node name="Lasergun" type="MeshInstance" parent="PointerR"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 11 )
skeleton = NodePath("../..")

[node name="SpotLight" type="SpotLight" parent="PointerR"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.03103 )
shadow_enabled = true
spot_range = 50.0
spot_attenuation = 2.14355
spot_angle = 7.0
spot_angle_attenuation = 0.392292

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/NO POWER" = SubResource( 12 )
anims/PowerOn = SubResource( 14 )
anims/RESET = SubResource( 13 )
